        Class LargeInteger:
            - New tightDecoding() routines.
            - Now supports creation and assignment from long long (both
              signed and unsigned).
        Class Laurent<T>, Laurent2<T>:
            - New tightDecoding() routines.
        Class Link:
            - New routines for tight encodings and decodings.
            - Routines dtData(), gaussData(), jenkinsData() and pdData() now
              throw exceptions if the link is so large that the C++ int type
              is not large enough to hold the values being returned.
            - The Jones and HOMFLY-PT routines now throw exceptions if the
              link is so insanely large that strand IDs cannot fit into ints.
            - The Jones backtracking algorithm now supports 63 crossings on
              all platforms, even if the long type has only 32 bits.
        Class Matrix:
            - Routine det() now throws an exception if the matrix is not
              square (this is a precondition), and now returns 1 if the
              matrix is detected to be 0-by-0 (although such matrices are
              formally not supported by the Matrix class).
            - You can now multiply a matrix over type T with a matrix or vector
              over type U, where T and U are different types.
        Class NormalHypersurface:
            - New operators * and *= for taking integer multiples.  The old
              doubleHypersurface() is now deprecated.
            - New routine scaleDown().
        Class NormalSurface:
            - New operators * and *= for taking integer multiples.  The old
              doubleSurface() is now deprecated.
            - New routine scaleDown().
            - New routine isNormalEdgeLink().
        Class Perm<n>:
            - New routines for tight encodings and decodings.
        Type safe_tuple_element<...>:
            - New type alias that is like std::tuple_element<...> but