@@ -52,6 +52,7 @@ class ModelLinkGraph;
 class ModelLinkGraphArc;
 class ModelLinkGraphCells;
 class ModelLinkGraphNode;
+class StrandRef;
 
 /**
  * A reference to an outgoing edge from a node of a model graph for a
@@ -472,6 +473,20 @@ class ModelLinkGraph : public Output<ModelLinkGraph> {
          * Constructs an empty graph.
          */
         ModelLinkGraph();
+        /**
+         * Constructs the graph that models the given link.
+         *
+         * Any zero-component unknot components of the link will be ignored.
+         *
+         * The nodes of this graph will be numbered in the same way as
+         * the crossings of \a link.  For each node, arc 0 will represent
+         * the outgoing lower strand of the corresponding crossing.
+         *
+         * Using this constructor is identical to calling Link::graph().
+         *
+         * @param link the link that this new graph will model.
+         */
+        ModelLinkGraph(const Link& link);
         /**
          * Constructs a new copy of the given graph.
          *
@@ -941,6 +956,21 @@ class ModelLinkGraph : public Output<ModelLinkGraph> {
             { -1, -1, -1, 0, -1, -1, 1, -1, -1, 3, -1, -1, 2 },
             { -1, -1, -1, 1, -1, -1, 2, -1, -1, 0, -1, -1, 3 }
         };
+
+        /**
+         * Internal to the constructor that takes a link to model.
+         *
+         * This function returns the outgoing arc of this graph that
+         * corresponds to the outgoing upper/lower strand at the given crossing.
+         */
+        ModelLinkGraphArc outgoingArc(const StrandRef& s);
+        /**
+         * Internal to the constructor that takes a link to model.
+         *
+         * This function returns the outgoing arc of this graph that
+         * corresponds to the incoming upper/lower strand at the given crossing.
+         */
+        ModelLinkGraphArc incomingArc(const StrandRef& s);
 };
 
 /**
